CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(pattern-fun)

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE Debug)
ENDIF()

GET_FILENAME_COMPONENT( SOURCE_ROOT . ABSOLUTE )
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${SOURCE_ROOT}/bin/${BIN_PATH_POSTFIX})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${SOURCE_ROOT}/bin/${BIN_PATH_POSTFIX})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${SOURCE_ROOT}/bin/${BIN_PATH_POSTFIX})

IF(NOT MSVC)
	ADD_COMPILE_OPTIONS(--std=c++14)
	ADD_COMPILE_OPTIONS(-Wall)
	ADD_COMPILE_OPTIONS(-Werror)
	LINK_LIBRARIES(stdc++)
ENDIF()

INCLUDE_DIRECTORIES(${SOURCE_ROOT})

ADD_SUBDIRECTORY(Composite)
ADD_SUBDIRECTORY(Factory)
ADD_SUBDIRECTORY(State)
ADD_SUBDIRECTORY(Decorator)
ADD_SUBDIRECTORY(FluentBuilder)
ADD_SUBDIRECTORY(Visitor)
ADD_SUBDIRECTORY(Singleton)
ADD_SUBDIRECTORY(Strategy)
ADD_SUBDIRECTORY(Pimpl)
ADD_SUBDIRECTORY(Template)
ADD_SUBDIRECTORY(Command)
ADD_SUBDIRECTORY(ChainOfResponsibility)
ADD_SUBDIRECTORY(Observer)
ADD_SUBDIRECTORY(Proxy)
