CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
PROJECT(Singleton)

AUX_SOURCE_DIRECTORY(. PROJECT_SOURCE)
FILE(GLOB PROJECT_INCLUDES "*.h")

ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_SOURCE} ${PROJECT_INCLUDES})
IF(CMAKE_COMPILER_IS_GNUCXX)
	TARGET_LINK_LIBRARIES(${PROJECT_NAME} pthread)
ENDIF(CMAKE_COMPILER_IS_GNUCXX)
